syntax = "proto3";

option java_multiple_files = true;
option java_package = "cloud";

message CloudRequest {
    string assetFolder = 1;
    bytes data = 2;
    string resourceType = 3; 
}

message CloudUrl {
    string url = 1;
}
message CloudUrls {
   repeated string url = 1;
}

message Messages {
    string value = 1;
}

service CloudService {
    rpc upload(CloudRequest) returns (CloudUrl);
    rpc delete(CloudUrl) returns (Messages);
    rpc deletes(CloudUrls) returns (Messages);
}
